fix readme button on IE

--- a/src/components/PagePreview/index.css
+++ b/src/components/PagePreview/index.css
@@ -149,7 +149,7 @@
         -webkit-align-self: left;
         display: inline-flex;
         display: -webkit-inline-flex;
-        margin-top: 1rem;
+        margin-top: 1.5rem;
         border-radius: 3px;
         font-size: 0.8rem;
         text-align: center;
@@ -197,7 +197,7 @@
         -webkit-align-self: left;
         display: inline-flex;
         display: -webkit-inline-flex;
-        margin-top: 1rem;
+        margin-top: 1.5rem;
         border-radius: 3px;
         font-size: 0.8rem;
         text-align: center;
